--- a/src/style.css
+++ b/src/style.css
@@ -77,8 +77,122 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+/*
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}*/
+
+
+
+
+/* Meme generator app styles */
+
+/*
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+img {
+  width: 100%;
+  display: block;
+}
+
+
+header {
+  background-color: #000;
+  padding: 15px;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+
+
+button, input {
+  font-family: inherit;
+}
+
+.container {
+  padding: 15px;
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+/* form */
+
+/* form {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(100px, 1fr));
+  gap: 15px;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+[type="text"] {
+  padding: 15px ;
+}
+
+[type="button"] {
+  grid-column: 1 / -1;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.wrapper {
+  border: 1px solid gray;
+  object-fit: cover;
+  max-width: 400px;
+
+  overflow: hidden;
+  display: grid;
+  place-content: center;
+  
+  position: relative; 
+}
+
+
+.spinner {
+  border: 5px solid rgba(128, 128, 128, 0.575);
+  width: 40px;
+  height: 40px;
+  border-top: 5px solid red;
+  border-radius: 50%;
+  /* position: absolute;
+  top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  /* animation: rotate 1s ease-in-out  infinite;
+} */
+/* 
+span {
+  position: absolute;
+  z-index: 1000;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.2rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.top {
+  top: 35px;
+
+}
+
+.bottom {
+  bottom: 35px;
+  left: 50%;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+} */
